--- a/Proyecto 1/nbproject/project.properties
+++ b/Proyecto 1/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto_1
-main.class=olc1.project1.Proyecto1
+main.class=olc1.project1.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
