--- a/Proyecto 2/project-2/package.json
+++ b/Proyecto 2/project-2/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
+    "d3-graphviz": "^4.4.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
