--- a/Proyecto 2/project-2-backend/package.json
+++ b/Proyecto 2/project-2-backend/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "typescript-guid": "^1.0.3"
   },
   "scripts": {
     "start": "node dist/index.js",
