--- a/Proyecto 2/project-2/package.json
+++ b/Proyecto 2/project-2/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "~14.2.4",
     "@angular/compiler-cli": "^14.2.0",
     "@angular/localize": "^14.2.4",
+    "@types/d3-graphviz": "^2.6.7",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
